apps/addons/envoy/gatewayclass-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: external
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  description: GatewayClass for external traffic - accessible from outside the network
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: external-proxy-config
    namespace: envoy-gateway
